--- a/index.html
+++ b/index.html
@@ -1,1 +1,104 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>One Month Ideal Mother & Father Program</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f3f4f6;
+            color: #333;
+        }
+        header {
+            background-color: #2563eb;
+            color: white;
+            padding: 2rem 1rem;
+            text-align: center;
+        }
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
+        }
+        main {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem 1rem;
+        }
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1rem;
+        }
+        .card {
+            background-color: white;
+            border-radius: 0.5rem;
+            padding: 1.5rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .button {
+            display: inline-block;
+            background-color: #10b981;
+            color: white;
+            text-decoration: none;
+            padding: 0.75rem 1.5rem;
+            border-radius: 9999px;
+            font-weight: bold;
+            font-size: 1.25rem;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #059669;
+        }
+        footer {
+            background-color: #1f2937;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>One Month Ideal Mother & Father Program</h1>
+        <p>Transform your parenting journey in just 30 days</p>
+    </header>
+
+    <main>
+        <section>
+            <h2>What's Included</h2>
+            <div class="grid">
+                <div class="card">
+                    <h3>Weekly Group Calls</h3>
+                    <p>1.5 hours of collaborative learning and support</p>
+                </div>
+                <div class="card">
+                    <h3>One-on-One Sessions</h3>
+                    <p>30 minutes of personalized guidance each week</p>
+                </div>
+                <div class="card">
+                    <h3>Daily Meditations</h3>
+                    <p>Personalized practices to center and ground you</p>
+                </div>
+                <div class="card">
+                    <h3>Targeted Support</h3>
+                    <p>Meditations for anxiety, depression, anger, and stuckness</p>
+                </div>
+            </div>
+        </section>
+
+        <section style="text-align: center; margin-top: 2rem;">
+            <h2>Invest in Your Family's Future</h2>
+            <p style="font-size: 1.5rem; color: #2563eb; font-weight: bold;">$150 for the entire program</p>
+            <a href="#" class="button">Sign Up Now</a>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 One Month Ideal Mother & Father Program. All rights reserved.</p>
+    </footer>
+</body>
+</html>
